<resources>
    <string name="app_name">Jogo da Velha</string>
    <string name="action_settings">Settings</string>

    <string name="jogador1">Jogador 1 |%1$s|</string>

    <string name="jogador2">Jogador 2 |%1$s|</string>

    <string name="Velha">Velha </string>



    <string name="vencedor">Venceu!!</string>
    <string name="velha">Velha!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="resetar">Zerar o placar</string>
    <string name="telaInicio">Voltar a tela inicial</string>
    <string name="preferencias">Preferências</string>

</resources>