<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jogovelha.activity.MainActivity">
    <item
        android:id="@+id/menu_resetar"
        android:title="@string/resetar"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_revert"/>

    <item
        android:id="@+id/menu_home"
        android:title="@string/telaInicio"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_compass"/>

    <item
        android:id="@+id/menu_preferencias"
        android:title="@string/preferencias"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>