<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.JogoFragment">


    <LinearLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linear_jogador1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvJogador1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/jogador1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/placar_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="250dp"
            android:text="0"
            android:textAppearance="@android:style/TextAppearance.Large" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/linear_jogador1"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/linear_jogador1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linear_jogador2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvJogador2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogador2"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
        <TextView
            android:id="@+id/placar_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="259dp"
            android:textAppearance="@android:style/TextAppearance.Large"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/linear_jogador2"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/linear_jogador2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linear_velha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvVelha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Velha"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
        <TextView
            android:id="@+id/velhaPlacar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="331dp"
            android:textAppearance="@android:style/TextAppearance.Large"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_velha">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <Button
                android:id="@+id/bt00"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt01"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt02"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt03"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt04"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <Button
                android:id="@+id/bt10"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt11"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt12"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt13"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt14"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <Button
                android:id="@+id/bt20"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt21"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt22"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt23"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt24"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <Button
                android:id="@+id/bt30"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt31"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt32"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt33"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt34"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <Button
                android:id="@+id/bt40"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt41"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt42"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt43"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt44"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="50dp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>